# ai-llm-engineering-1

./: README.md
backup/day_5/bills/: ai_law.json
backup/day_5/data/: Assignment v2.py  Assignment.py
backup/day_6/: pyproject.toml
day_1/: Hello_LLM.ipynb
day_3/: 1_Basic_RAG.ipynb  2_Production_RAG.ipynb  pyproject.toml
day_3/data/: noli.txt
day_3/psi/: vectordatabase.py
day_4/: 1-ragas.ipynb  2-SDG.ipynb  pyproject.toml
day_4/bills/: ai_law.json
day_4/data/: lotr.json
day_5/: 1-advanced_retrievers.ipynb  2-Assignment.ipynb  pyproject.toml
day_5/bills/: ai_law.json  golden_dataset.json
day_5/data/: 2-Assignment[backup].ipynb
day_6/: 1-langgraph.ipynb  2-openai_agents.ipynb
day_7/: Multi_Agent_RAG_LangGraph.ipynb  pyproject.toml
day_7/content/data/09c95730/: AI_Bills_in_Philippines_Response.txt
day_7/content/data/0c802a1e/: AI_Regulatory_Landscape_Philippines.txt  AI_Regulatory_Landscape_Philippines_Outline.txt
day_7/content/data/5c29bbfe/: AI_Bills_Position_Philippines_Response.txt
day_7/content/data/84695e7c/: AI_Bills_Positioning_Statement_Philippines.txt
day_7/content/data/dd89cdeb/: AI_Bill_Outline_Philippines.txt  AI_Bill_Positioning_Statement_Philippines.txt
day_8/deep_research/: README.md  open-deep-research.ipynb  pyproject.toml
day_8/mcp/: README.md  main.py  mcp_client.py  mcp_http_client.py  mcp_sampling_client.py  mcp_sampling_server.py  mcp_server.py  pyproject.toml
day_8/mcp/tool/: dice_roller.py
