[project]
name = "13-advanced-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-experimental>=0.3.4",
    "langchain>=0.3.19",
    "langchain-cohere==0.4.4",
    "langchain-community>=0.3.27",
    "cohere>=5.12.0,<5.13.0", 
    "langchain-openai>=0.3.27",
    "qdrant-client>=1.13.2",
    "rank-bm25>=0.2.2",
    "langchain-qdrant>=0.2.0",  
    "langchain-core>=0.3.67",
    "langgraph>=0.5.0",
    "langsmith>=0.4.4"
]
